_kubernetes/homer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
spec:
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:v25.05.2
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 128Mi
            cpu: 500m
        ports:
        - containerPort: 8080
