_kubernetes/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  selector:
    app: homer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
